modified style and config

--- a/src/app.css
+++ b/src/app.css
@@ -56,7 +56,7 @@ a {
 #header .logo {
   font-size: 18px;
   font-weight: bold;
-  color: #319848;
+  color: darkorange;
 }
 
 #header .navi {
@@ -204,6 +204,6 @@ a {
 }
 
 #footer a {
-  color: #58AD6A;
+  color: darkorange;
   font-weight: bold;
 }
